--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Smyth03_01</string>
     <string name="action_settings">Settings</string>
+    <string name="hello_world">Status text</string>
+    <string name="press_me">Press me</string>
 </resources>
